--- a/src/ExactOnline.Client.Sdk/ExactOnline.Client.Sdk.csproj
+++ b/src/ExactOnline.Client.Sdk/ExactOnline.Client.Sdk.csproj
@@ -29,7 +29,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.Reflection" Version="4.3.0" />
   </ItemGroup>
 	<ItemGroup>
 	  <Compile Remove="obj\**" />
@@ -50,4 +52,7 @@
       <Name>ExactOnline.Client.Models</Name>
     </ProjectReference>
   </ItemGroup>
+  <PropertyGroup>
+   <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup> 
 </Project>
